src/strace/parser/snapshots/shh__strace__parser__tests__name_only-3.snap
---
source: src/strace/parser/mod.rs
expression: result
---
Parsed(Syscall(Syscall(
  pid: 641342,
  rel_ts: 0.000022,
  name: "openat",
  args: [
    Integer(IntegerExpression(
      value: NamedSymbol("AT_FDCWD"),
      metadata: None,
    )),
    Buffer(BufferExpression(
      value: [
        47,
        97,
      ],
      type_: Unknown,
    )),
    Integer(IntegerExpression(
      value: NamedSymbol("O_RDONLY"),
      metadata: None,
    )),
  ],
  ret_val: IntegerExpression(
    value: Literal(3),
    metadata: None,
  ),
)))
