src/strace/parser/snapshots/shh__strace__parser__tests__name_only.snap
---
source: src/strace/parser/mod.rs
expression: result
---
Parsed(NameOnly(
  name: "sched_yield",
  ret_val: Some(IntegerExpression(
    value: Literal(0),
    metadata: None,
  )),
))
