src/strace/parser/snapshots/shh__strace__parser__tests__named_args.snap
---
source: src/strace/parser/mod.rs
expression: "parse_line(\"714433      0.000035 clone(child_stack=NULL, flags=CLONE_CHILD_CLEARTID|CLONE_CHILD_SETTID|SIGCHLD, child_tidptr=0x7f3f3c2f5090) = 714434\",\n&HashSet::from([\"clone\"]),).unwrap()"
---
Parsed(Syscall(Syscall(
  pid: 714433,
  rel_ts: 0.000035,
  name: "clone",
  args: [
    Struct({
      "child_stack": Integer(IntegerExpression(
        value: NamedSymbol("NULL"),
        metadata: None,
      )),
      "child_tidptr": Integer(IntegerExpression(
        value: Literal(139909569400976),
        metadata: None,
      )),
      "flags": Integer(IntegerExpression(
        value: BinaryOr([
          NamedSymbol("CLONE_CHILD_CLEARTID"),
          NamedSymbol("CLONE_CHILD_SETTID"),
          NamedSymbol("SIGCHLD"),
        ]),
        metadata: None,
      )),
    }),
  ],
  ret_val: IntegerExpression(
    value: Literal(714434),
    metadata: None,
  ),
)))
