src/strace/parser/snapshots/shh__strace__parser__tests__truncated.snap
---
source: src/strace/parser/mod.rs
expression: "parse_line(\"28707      0.000194 sendto(15<\\\\x73\\\\x6f\\\\x63\\\\x6b\\\\x65\\\\x74\\\\x3a\\\\x5b\\\\x35\\\\x34\\\\x31\\\\x38\\\\x32\\\\x31\\\\x33\\\\x5d>, [{nlmsg_len=20, nlmsg_type=RTM_GETADDR, nlmsg_flags=NLM_F_REQUEST|NLM_F_DUMP, nlmsg_seq=1694010548, nlmsg_pid=0}, {ifa_family=AF_UNSPEC, ...}], 20, 0, {sa_family=AF_NETLINK, nl_pid=0, nl_groups=00000000}, 12) = 20\",\n&HashSet::from([\"sendto\"]),).unwrap()"
---
Parsed(Syscall(Syscall(
  pid: 28707,
  rel_ts: 0.000194,
  name: "sendto",
  args: [
    Integer(IntegerExpression(
      value: Literal(15),
      metadata: Some([
        115,
        111,
        99,
        107,
        101,
        116,
        58,
        91,
        53,
        52,
        49,
        56,
        50,
        49,
        51,
        93,
      ]),
    )),
    Collection(
      complement: false,
      values: [
        (None, Struct({
          "nlmsg_flags": Integer(IntegerExpression(
            value: BinaryOr([
              NamedSymbol("NLM_F_REQUEST"),
              NamedSymbol("NLM_F_DUMP"),
            ]),
            metadata: None,
          )),
          "nlmsg_len": Integer(IntegerExpression(
            value: Literal(20),
            metadata: None,
          )),
          "nlmsg_pid": Integer(IntegerExpression(
            value: Literal(0),
            metadata: None,
          )),
          "nlmsg_seq": Integer(IntegerExpression(
            value: Literal(1694010548),
            metadata: None,
          )),
          "nlmsg_type": Integer(IntegerExpression(
            value: NamedSymbol("RTM_GETADDR"),
            metadata: None,
          )),
        })),
        (None, Struct({
          "ifa_family": Integer(IntegerExpression(
            value: NamedSymbol("AF_UNSPEC"),
            metadata: None,
          )),
        })),
      ],
    ),
    Integer(IntegerExpression(
      value: Literal(20),
      metadata: None,
    )),
    Integer(IntegerExpression(
      value: Literal(0),
      metadata: None,
    )),
    Struct({
      "nl_groups": Integer(IntegerExpression(
        value: Literal(0),
        metadata: None,
      )),
      "nl_pid": Integer(IntegerExpression(
        value: Literal(0),
        metadata: None,
      )),
      "sa_family": Integer(IntegerExpression(
        value: NamedSymbol("AF_NETLINK"),
        metadata: None,
      )),
    }),
    Integer(IntegerExpression(
      value: Literal(12),
      metadata: None,
    )),
  ],
  ret_val: Some(IntegerExpression(
    value: Literal(20),
    metadata: None,
  )),
)))
